objects/PSCommFooterConfig__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copyright__c</fullName>
        <label>Copyright</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Signup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Signup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <label>Home</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo_Icon__c</fullName>
        <label>Logo Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Powered_by_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Powered by Salesforce?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Color_1__c</fullName>
        <label>Primary Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Color_2__c</fullName>
        <label>Primary Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Color_3__c</fullName>
        <label>Primary Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Label__c</fullName>
        <label>Primary Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSS__c</fullName>
        <label>RSS</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secondary_Color_1__c</fullName>
        <label>Secondary Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Color_2__c</fullName>
        <label>Secondary Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Color_3__c</fullName>
        <label>Secondary Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Label__c</fullName>
        <label>Secondary Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YouTube__c</fullName>
        <label>YouTube</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>PSCommFooterConfig</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSCommFooterConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>